// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect Frontend Atlassian Connect should return Atlassian Connect with signed-install:true when feature flag is on 1`] = `
Object {
  "apiMigrations": Object {
    "gdpr": false,
    "signed-install": true,
  },
  "apiVersion": 1,
  "authentication": Object {
    "type": "jwt",
  },
  "description": "Connect your code and your project with ease.",
  "lifecycle": Object {
    "disabled": "/jira/events/disabled",
    "enabled": "/jira/events/enabled",
    "installed": "/jira/events/installed",
    "uninstalled": "/jira/events/uninstalled",
  },
  "modules": Object {
    "adminPages": Array [
      Object {
        "conditions": Array [
          Object {
            "condition": "addon_property_exists",
            "invert": true,
            "params": Object {
              "objectKey": "has-repos",
              "propertyKey": "configuration",
            },
          },
          Object {
            "condition": "user_is_admin",
          },
        ],
        "key": "gh-addon-admin",
        "location": "admin_plugins_menu/gh-addon-admin-section",
        "name": Object {
          "value": "Configure integration",
        },
        "url": "/jira/configuration",
      },
    ],
    "jiraBuildInfoProvider": Object {
      "homeUrl": "https://github.com/features/actions",
      "key": "github-actions",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub Actions",
      },
    },
    "jiraDeploymentInfoProvider": Object {
      "homeUrl": "https://github.com/features/actions",
      "key": "github-deployments",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub Actions",
      },
    },
    "jiraDevelopmentTool": Object {
      "application": Object {
        "value": "GitHub",
      },
      "capabilities": Array [
        "branch",
        "commit",
        "pull_request",
      ],
      "key": "github-development-tool",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub",
      },
      "url": "https://github.com",
    },
    "postInstallPage": Object {
      "conditions": Array [
        Object {
          "condition": "addon_property_exists",
          "invert": true,
          "params": Object {
            "objectKey": "has-repos",
            "propertyKey": "configuration",
          },
        },
        Object {
          "condition": "user_is_admin",
        },
      ],
      "key": "github-post-install-page",
      "name": Object {
        "value": "GitHub Configuration",
      },
      "url": "/jira/configuration",
    },
    "webSections": Array [
      Object {
        "key": "gh-addon-admin-section",
        "location": "admin_plugins_menu",
        "name": Object {
          "value": "GitHub",
        },
      },
    ],
  },
  "scopes": Array [
    "READ",
    "WRITE",
    "DELETE",
  ],
  "vendor": Object {
    "name": "Atlassian",
    "url": "https://atlassian.com",
  },
}
`;

exports[`Connect Frontend Atlassian Connect should return Atlassian Connect without signed-install:true when feature flag is off 1`] = `
Object {
  "apiMigrations": Object {
    "gdpr": false,
  },
  "apiVersion": 1,
  "authentication": Object {
    "type": "jwt",
  },
  "description": "Connect your code and your project with ease.",
  "lifecycle": Object {
    "disabled": "/jira/events/disabled",
    "enabled": "/jira/events/enabled",
    "installed": "/jira/events/installed",
    "uninstalled": "/jira/events/uninstalled",
  },
  "modules": Object {
    "adminPages": Array [
      Object {
        "conditions": Array [
          Object {
            "condition": "addon_property_exists",
            "invert": true,
            "params": Object {
              "objectKey": "has-repos",
              "propertyKey": "configuration",
            },
          },
          Object {
            "condition": "user_is_admin",
          },
        ],
        "key": "gh-addon-admin",
        "location": "admin_plugins_menu/gh-addon-admin-section",
        "name": Object {
          "value": "Configure integration",
        },
        "url": "/jira/configuration",
      },
    ],
    "jiraBuildInfoProvider": Object {
      "homeUrl": "https://github.com/features/actions",
      "key": "github-actions",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub Actions",
      },
    },
    "jiraDeploymentInfoProvider": Object {
      "homeUrl": "https://github.com/features/actions",
      "key": "github-deployments",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub Actions",
      },
    },
    "jiraDevelopmentTool": Object {
      "application": Object {
        "value": "GitHub",
      },
      "capabilities": Array [
        "branch",
        "commit",
        "pull_request",
      ],
      "key": "github-development-tool",
      "logoUrl": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
      "name": Object {
        "value": "GitHub",
      },
      "url": "https://github.com",
    },
    "postInstallPage": Object {
      "conditions": Array [
        Object {
          "condition": "addon_property_exists",
          "invert": true,
          "params": Object {
            "objectKey": "has-repos",
            "propertyKey": "configuration",
          },
        },
        Object {
          "condition": "user_is_admin",
        },
      ],
      "key": "github-post-install-page",
      "name": Object {
        "value": "GitHub Configuration",
      },
      "url": "/jira/configuration",
    },
    "webSections": Array [
      Object {
        "key": "gh-addon-admin-section",
        "location": "admin_plugins_menu",
        "name": Object {
          "value": "GitHub",
        },
      },
    ],
  },
  "scopes": Array [
    "READ",
    "WRITE",
    "DELETE",
  ],
  "vendor": Object {
    "name": "Atlassian",
    "url": "https://atlassian.com",
  },
}
`;
